<?xml version="1.0"?>
<package format="2">
  <name>dynahead2_control</name>
  <version>1.0.0</version>
  <description>Node that interfaces between dynahead2 and ROS</description>
  <maintainer email="olivefi@ethz.ch">Oliver Fischer</maintainer>
  <license>Proprietary</license>
  <author email="olivefi@ethz.ch">Oliver Fischer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>any_node</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamixel_sdk</depend>

  <test_depend>cmake_code_coverage</test_depend>
  <test_depend>gtest</test_depend>

</package>
